# paraflate

./: Cargo.toml  README.md
crates/paraflate-bench/: Cargo.toml
crates/paraflate-bench/benches/: workloads.rs
crates/paraflate-buffers/: Cargo.toml
crates/paraflate-buffers/src/: lib.rs  pool.rs
crates/paraflate-cli/: Cargo.toml
crates/paraflate-cli/src/: main.rs
crates/paraflate-core/: Cargo.toml
crates/paraflate-core/src/: archive.rs  blocks.rs  budget.rs  compression.rs  descriptor.rs  error.rs  execution.rs  explain.rs  ids.rs  lib.rs  predictive.rs  stats.rs  tasks.rs
crates/paraflate-deflate/: Cargo.toml
crates/paraflate-deflate/src/: bit_writer.rs  dynamic.rs  dynamic_block.rs  engine.rs  fixed.rs  huffman.rs  lib.rs  plan.rs  pm.rs  stream.rs  tables.rs
crates/paraflate-dictionary/: Cargo.toml
crates/paraflate-dictionary/src/: analyze.rs  lib.rs  sample.rs
crates/paraflate-harness/: Cargo.toml
crates/paraflate-harness/src/: corpus.rs  error.rs  lib.rs  main.rs  modes.rs  profile.rs  reference.rs  report.rs  validate.rs
crates/paraflate-index/: Cargo.toml
crates/paraflate-index/src/: lib.rs  table.rs
crates/paraflate-io/: Cargo.toml
crates/paraflate-io/src/: lib.rs  read.rs  scan.rs
crates/paraflate-lz77/: Cargo.toml
crates/paraflate-lz77/src/: block.rs  hash.rs  lib.rs  window.rs
crates/paraflate-pipeline/: Cargo.toml
crates/paraflate-pipeline/src/: archive_checker.rs  block_cost_model.rs  explain.rs  fallback_policy.rs  intel.rs  lib.rs  predictive_plan.rs  report.rs  session.rs  validation_cli.rs  verification.rs
crates/paraflate-scheduler/: Cargo.toml
crates/paraflate-scheduler/src/: graph.rs  lib.rs  pool.rs
crates/paraflate-tests/: Cargo.toml
crates/paraflate-tests/src/: lib.rs  roundtrip_test_helpers.rs
crates/paraflate-tests/tests/: predictive_verify.rs  zip_roundtrip.rs
crates/paraflate-verify/: Cargo.toml
crates/paraflate-verify/src/: bit_reader.rs  huffman.rs  inflate.rs  lib.rs  tables.rs  zip.rs
crates/paraflate-zip/: Cargo.toml
crates/paraflate-zip/src/: lib.rs  record.rs  writer.rs
test_file/: manifest.json
test_file/corpus/wl_14_nested_many_small/1/11/: f23.txt
test_file/corpus/wl_14_nested_many_small/1/6/: f18.txt
test_file/corpus/wl_14_nested_many_small/2/9/: f33.txt
test_file/corpus/wl_16_mixed_combined/dup/: two.txt
test_file/extracted/wl_02_medium_text__m05_adaptive_off/: medium.txt
test_file/extracted/wl_03_large_text__m03_predictive_aggressive/: large.txt
test_file/extracted/wl_05_mixed_text_numbers__m02_predictive_off/: mixed.txt
test_file/extracted/wl_06_json_like__m09_adaptive_on_global_huffman_off/: data.jsonish
test_file/extracted/wl_07_csv_like__m09_adaptive_on_global_huffman_off/: table.csv
test_file/extracted/wl_09_source_like__m10_combo_full/: sample.rs
test_file/extracted/wl_12_duplicate_heavy__m09_adaptive_on_global_huffman_off/: dup.txt
test_file/extracted/wl_13_near_duplicate__m05_adaptive_off/: a.txt
test_file/extracted/wl_13_near_duplicate__m07_verification_strict/: b.txt
test_file/extracted/wl_14_nested_many_small__m01_standard_create/2/0/: f24.txt
test_file/extracted/wl_14_nested_many_small__m02_predictive_off/1/8/: f20.txt
test_file/extracted/wl_14_nested_many_small__m03_predictive_aggressive/1/10/: f22.txt
test_file/extracted/wl_14_nested_many_small__m03_predictive_aggressive/1/7/: f19.txt
test_file/extracted/wl_14_nested_many_small__m04_adaptive_on/1/9/: f21.txt
test_file/extracted/wl_14_nested_many_small__m04_adaptive_on/2/3/: f27.txt
test_file/extracted/wl_14_nested_many_small__m04_adaptive_on/2/6/: f30.txt
test_file/extracted/wl_14_nested_many_small__m04_scheduler_throughput_biased/2/2/: f26.txt
test_file/extracted/wl_14_nested_many_small__m05_adaptive_off/0/1/: f1.txt
test_file/extracted/wl_14_nested_many_small__m05_adaptive_off/0/3/: f3.txt
test_file/extracted/wl_14_nested_many_small__m05_adaptive_off/0/4/: f4.txt
test_file/extracted/wl_14_nested_many_small__m05_adaptive_off/1/0/: f12.txt
test_file/extracted/wl_14_nested_many_small__m05_adaptive_off/2/1/: f25.txt
test_file/extracted/wl_14_nested_many_small__m05_planning_safe/0/5/: f5.txt
test_file/extracted/wl_14_nested_many_small__m06_verification_off/1/4/: f16.txt
test_file/extracted/wl_16_mixed_combined__m04_scheduler_throughput_biased/text/: readme.txt
test_file/extracted/wl_16_mixed_combined__m09_global_huffman_off/csv/: summary.csv
test_file/reports/: comparison_table.tsv  comparisons.json  harness_run.json  summary.txt
(+17 files in other folders)
