[package]
name = "paraflate-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
criterion.workspace = true
paraflate-core = { path = "../paraflate-core" }
paraflate-pipeline = { path = "../paraflate-pipeline" }
tempfile.workspace = true

[[bench]]
name = "workloads"
harness = false
