[package]
name = "paraflate-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "paraflate"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
paraflate-core = { path = "../paraflate-core" }
paraflate-io = { path = "../paraflate-io" }
paraflate-pipeline = { path = "../paraflate-pipeline" }
paraflate-harness = { path = "../paraflate-harness" }
tempfile.workspace = true
