[package]
name = "paraflate-deflate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crc32fast.workspace = true
itertools.workspace = true
paraflate-core = { path = "../paraflate-core" }
paraflate-dictionary = { path = "../paraflate-dictionary" }
paraflate-index = { path = "../paraflate-index" }
paraflate-lz77 = { path = "../paraflate-lz77" }
paraflate-scheduler = { path = "../paraflate-scheduler" }

[dev-dependencies]
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
