[package]
name = "paraflate-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "paraflate-harness"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
paraflate-core = { path = "../paraflate-core" }
paraflate-io = { path = "../paraflate-io" }
paraflate-pipeline = { path = "../paraflate-pipeline" }
paraflate-verify = { path = "../paraflate-verify" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror.workspace = true
zip = { version = "2.2", default-features = false, features = ["deflate", "deflate-flate2"] }

[lib]
name = "paraflate_harness"
path = "src/lib.rs"
