[package]
name = "paraflate-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
paraflate-core = { path = "../paraflate-core" }
paraflate-pipeline = { path = "../paraflate-pipeline" }
paraflate-scheduler = { path = "../paraflate-scheduler" }
paraflate-verify = { path = "../paraflate-verify" }
paraflate-zip = { path = "../paraflate-zip" }
tempfile.workspace = true
